--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,3 +20,4 @@ jobs:
           name: Install API Dependencies
           command: |
             npm run backend:install
+            echo "Hello word"
